Added a bit more functionality

--- a/ExpenseTrackerApp/index.html
+++ b/ExpenseTrackerApp/index.html
@@ -24,7 +24,7 @@
                 <h2>Balance</h2>
             </div>
             <div class="out-amt">
-                <h1><i class='bx bx-rupee'></i>800</h1>
+                <h1><i class='bx bx-rupee'></i>-800</h1>
                 <h2>Expense</h2>
             </div>  
         </div>
@@ -42,38 +42,48 @@
             </div>
             <div class="exp-tab">
                 <div class="expense">
-                    <div class="amt">
-                        <h5>Amount</h5>
-                        <h5><i class='bx bx-rupee'></i>200</h5>
+                    <div class="main">
+                        <div class="amt">
+                            <h5>Amount</h5>
+                            <h5><i class='bx bx-rupee'></i>200</h5>
+                        </div>
+                        <div class="itm">
+                            <h6>Items</h6>
+                            <h6>4</h6>
+                        </div>
+                        <div class="description">
+                            <p>Chips, Onion, Wheat, Soda</p>
+                        </div>
                     </div>
-                    <div class="itm">
-                        <h6>Items</h6>
-                        <h6>4</h6>
-                    </div>
-                    <div class="description">
-                        <p>Chips, Onion, Wheat, Soda</p>
-                    </div>
+                    <div class="btn-del"><i class='bx bx-trash'></i></div>
                 </div>
                 <div class="expense">
-                    <div class="amt">
-                        <h5>Amount</h5>
-                        <h5><i class='bx bx-rupee'></i>600</h5>
+                    <div class="main">
+                        <div class="amt">
+                            <h5>Amount</h5>
+                            <h5><i class='bx bx-rupee'></i>600</h5>
+                        </div>
+                        <div class="itm">
+                            <h6>Items</h6>
+                            <h6>3</h6>
+                        </div>
+                        <div class="description">
+                            <p>Rice, Wheat, Potato</p>
+                        </div>
                     </div>
-                    <div class="itm">
-                        <h6>Items</h6>
-                        <h6>4</h6>
-                    </div>
-                    <div class="description">
-                        <p>Rice, Wheat, Potatos</p>
-                    </div>
+                    <div class="btn-del"><i class='bx bx-trash'></i></div>
                 </div>
-                <div class="expense exp-3"></div> 
             </div>  
         </div>
         <div class="options">
-            <button class="add">Add</button>
+            <button class="add">Add Balance</button>
+            <button class="add">Add Expense</button>
             <button class="add">Delete</button>
         </div>
+        <!-- <div class="Add-cash">
+            <h1>Amount</h1>
+            <span>2000</span>
+        </div> -->
     </div>
 </body>
 </html>
