Chore: removed unnecessary button and added appropriate class name

--- a/ExpenseTrackerApp/index.html
+++ b/ExpenseTrackerApp/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="amount">
             <div class="in-amt">
-                <h1><i class='bx bx-rupee'></i><span id="in-num">2200</span></h1>
+                <h1><i class='bx bx-rupee'></i><span id="in-num">0.00</span></h1>
                 <h2>Balance</h2>
             </div>
             <div class="out-amt">
@@ -75,15 +75,14 @@
             </div>  
         </div>
         <div class="options">
-            <!-- <div class="add-new">
-                <h4>Enter Amount</h4>
+            <div class="func-tab">
+               <!-- <h4>Enter Amount</h4>
                 <input type="number" placeholder="0.00">
-                <h5>No. of items</h5>
-            </div> -->
+                <h5>No. of items</h5> -->
+            </div>
             <div class="btn-tab">
                 <button class="btn CashUp">Add Balance</button>
                 <button class="btn CashDown">Add Expense</button>
-                <button class="btn Delete">Delete</button>
             </div>
         </div>
     </div>
