Chore: improved structure and removed commented code

--- a/ExpenseTrackerApp/index.html
+++ b/ExpenseTrackerApp/index.html
@@ -75,14 +75,10 @@
             </div>  
         </div>
         <div class="options">
-            <div class="func-tab">
-               <!-- <h4>Enter Amount</h4>
-                <input type="number" placeholder="0.00">
-                <h5>No. of items</h5> -->
-            </div>
+            <div class="func-tab"></div>
             <div class="btn-tab">
                 <button class="btn CashUp">Add Balance</button>
-                <button class="btn CashDown">Add Expense</button>
+                <button class="btn CashDown">Add Expense</button>   
             </div>
         </div>
     </div>
