Improved structure by removing one temprary instance of Expense

--- a/ExpenseTrackerApp/index.html
+++ b/ExpenseTrackerApp/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="exp-tab">
-                <div class="expense">
+                <!-- <div class="expense">
                     <div class="main">
                         <div class="amt">
                             <h5>Amount</h5>
@@ -55,23 +55,7 @@
                         </div>
                     </div>
                     <div class="btn-del"><i class='bx bx-trash'></i></div>
-                </div>
-                <div class="expense">
-                    <div class="main">
-                        <div class="amt">
-                            <h5>Amount</h5>
-                            <h5><i class='bx bx-rupee'></i>600</h5>
-                        </div>
-                        <div class="itm">
-                            <h6>Items</h6>
-                            <h6>3</h6>
-                        </div>
-                        <div class="description">
-                            <p>Rice, Wheat, Potato</p>
-                        </div>
-                    </div>
-                    <div class="btn-del"><i class='bx bx-trash'></i></div>
-                </div>
+                </div> -->
             </div>  
         </div>
         <div class="options">
