Chore: removed unnecessary space within expense tab

--- a/ExpenseTrackerApp/index.html
+++ b/ExpenseTrackerApp/index.html
@@ -39,8 +39,7 @@
                     </select>
                 </div>
             </div>
-            <div class="exp-tab">
-            </div>  
+            <div class="exp-tab"></div>  
         </div>
         <div class="options">
             <div class="func-tab"></div>
