--- a/ToDoListApp/index.html
+++ b/ToDoListApp/index.html
@@ -13,19 +13,14 @@
     <div class="container">
         <div class="intro">
             <h1 class="head"><span>ToDo</span><br><span>List</span></h1>
-            <div class="count">1</div>
+            <div class="count">0</div>
         </div>
         <div class="task-Box">
             <input type="text" name="task" id="new-task" placeholder="Add task...">
             <button class="add"><i class='bx bx-plus'></i></button>
         </div>
-        <div class="task-list-group">
-            <div class="task-container">
-                <button class="check"><i class='bx bx-check'></i></button>
-                <h2 class="task">Do laundry and Chores</h2>
-                <button class="delete"><i class='bx bxs-trash'></i></button>
-            </div>
-        </div>
+        <div class="task-list-group"></div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
