Chore: Added UI for hourly forcast

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -31,6 +31,41 @@
                 <h3 class="wind"><i class='bx bx-wind'></i> 6kph</h3>
             </div>
         </div>
+        <div class="hourly-forcast">
+            <h3>3 Hour Forcast</h3>
+            <div class="scroll-container">
+                <div class="child">
+                    <h4>Now</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>24</h4>
+                </div>
+                <div class="child">
+                    <h4>12AM</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>NA</h4>
+                </div>
+                <div class="child">
+                    <h4>3AM</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>NA</h4>
+                </div>
+                <div class="child">
+                    <h4>6AM</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>NA</h4>
+                </div>
+                <div class="child">
+                    <h4>9AM</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>NA</h4>
+                </div>
+                <div class="child">
+                    <h4>12PM</h4>
+                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
+                    <h4>NA</h4>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
