Chore: Removed hard coded hourly forecast

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="current">
             <h1 class="current-loc"><!-- <i class='bx bxs-navigation'></i> -->NA</h1>
+            <img src="" class="current-svg">
             <h2 class="temp">NA</h2>
             <h3 class="condition">NA</h3>
             <span>
@@ -28,45 +29,15 @@
             </span>
             <div class="rain-wind-info">
                 <h3 class="rain"><span class="material-symbols-outlined rainDrop">water_drop</span> 0mm</h3>
-                <h3 class="wind"><i class='bx bx-wind'></i> 6kph</h3>
+                <h3 class="wind"><i class='bx bx-wind'></i> 0kph</h3>
             </div>
         </div>
         <div class="hourly-forcast">
-            <h3>3 Hour Forcast</h3>
-            <div class="scroll-container">
-                <div class="child">
-                    <h4>Now</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>24</h4>
-                </div>
-                <div class="child">
-                    <h4>12AM</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>NA</h4>
-                </div>
-                <div class="child">
-                    <h4>3AM</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>NA</h4>
-                </div>
-                <div class="child">
-                    <h4>6AM</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>NA</h4>
-                </div>
-                <div class="child">
-                    <h4>9AM</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>NA</h4>
-                </div>
-                <div class="child">
-                    <h4>12PM</h4>
-                    <i class='bx bxs-moon' style='color:#ffffff'  ></i>
-                    <h4>NA</h4>
-                </div>
-            </div>
+            <h3><i class='bx bx-time' style='color:#dededeea'></i> Hourly Forcast</h3>
+            <div class="scroll-container"></div>
         </div>
     </div>
+
     <script src="app.js"></script>
 </body>
 </html>
