Chore: Removed placeholder temprory elements

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -18,20 +18,7 @@
             <button class="search-btn"><i class='bx bx-search'></i></button>
             <button class="gps-Loc-btn"><i class='bx bx-current-location'></i></button>
         </div>
-        <div class="current">
-            <h1 class="current-loc"><!-- <i class='bx bxs-navigation'></i> -->NA</h1>
-            <img src="" class="current-svg">
-            <h2 class="temp">NA</h2>
-            <h3 class="condition">NA</h3>
-            <span>
-                <span class="temp-high">H: NA</span>
-                <span class="temp-low">L: NA</span>
-            </span>
-            <div class="rain-wind-info">
-                <h3 class="rain"><span class="material-symbols-outlined rainDrop">water_drop</span> 0mm</h3>
-                <h3 class="wind"><i class='bx bx-wind'></i> 0kph</h3>
-            </div>
-        </div>
+        <div class="current">Enter City</div>
         <div class="hourly-forcast">
             <h3><i class='bx bx-time' style='color:#dededeea'></i> Hourly Forcast</h3>
             <div class="scroll-container"></div>
