Chore: Added Pre-Load attention icon and message

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -18,10 +18,10 @@
             <button class="search-btn"><i class='bx bx-search'></i></button>
             <button class="gps-Loc-btn"><i class='bx bx-current-location'></i></button>
         </div>
-        <div class="current">Enter City</div>
+        <div class="current"><i class='bx bxs-error err'></i><span class="pre-load">Enter City</span></div>
         <div class="hourly-forcast">
             <h3><i class='bx bx-time' style='color:#dededeea'></i> Hourly Forcast</h3>
-            <div class="scroll-container"></div>
+            <div class="scroll-container"><i class='bx bxs-error'></i></div>
         </div>
     </div>
 
